--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "devDependencies": {
     "nodemon": "^2.0.7"
   },
-  "scripts":{
-  "start":"node index.js",
-  "start:dev":"nodemon index.js"
+  "scripts": {
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.8"
+  }
 }
-}
-
