--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
+    "commander": "^7.2.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.8"
   }
